card styling and spacing , add correct colors

--- a/qr-frontend/src/App.css
+++ b/qr-frontend/src/App.css
@@ -1,10 +1,16 @@
-
-
+.App {
+  background-color:  hsl(212, 45%, 89%);
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+}
 .card {
   max-width: 300px;
   margin: auto;
   border: 1px solid #ffffff;
-  border-radius: 25px;
+  padding: 15px;
+  border-radius: 18px;
+  background-color: hsl(0, 0%, 100%);
 }
 
 .qr-container {
@@ -13,7 +19,7 @@
 }
 
 .qr-img {
-  border-radius: 15px;
+  border-radius: 12px;
   object-fit: cover;
   width: 100%;
 }
@@ -25,10 +31,12 @@
 
 #text-main {
   font-weight: bolder;
+  font-size: 24px;
+  color: hsl(218, 44%, 22%);
 }
 
 #text-subheading {
-  font-weight: lighter;
-  font: rgb(190, 188, 188);
-  padding: 10px;
+  color: hsl(220, 15%, 55%);
+  padding: 0 10px;
+  font-size: 15px;
 }
